# explore-openai

./: .gitignore  README.md
basics/: pyproject.toml
basics/src/: 00021_lab_imgAnalysis.py  0002_lab_imgGeneration.py  01_hello_llm.py  01_hello_llm_final.py  02_openai_parameters.py  02_openai_parameters_final.py  03_openai_stream_response.py  03_openai_stream_response_final.py  04_system_assistant_user_message.py  04_system_assistant_user_message_final.py  05_image_generation.py  05_image_generation_final.py  06_image_edit_final.py  07_image_variation.py  07_image_variation_final.py  08_vision_encoded_image.py  08_vision_encoded_image_final.py  08_vision_image_url.py  09_text_to_speech.py  09_text_to_speech_final.py  10_audio_transcribe.py  10_audio_transcribe_final.py  11_audio_translate.py  11_audio_translate_final.py  chat_app.py
streamlit-chat-ui/: chat_history.db  pyproject.toml
streamlit-chat-ui/src/: 1_app.py  1_app_final.py  2_app_with_session.py  2_app_with_session_final.py  3_app_with_chat_conversations.py  3_app_with_chat_conversations_final.py  3_canvas_calculator.py  4_app_with_save_chat_conversations.py  4_canvas_calculator.py  4_canvas_calculator_final.py  4_chatbot-sidebar_final.py  5_chatbot-sidebar_final.py  5_learn_sqlite3.py  5_learn_sqlite3_final.py  6-chatbot-persistance-final.py  6_chatbot_persistance_final.py  6_learn_sqlite3_final.py  6_prompts_chatbot_persistance.txt  7_chatbot_multimodal_img.py  7_chatbot_multimodal_img_final.py  7_chatbot_multimodal_prompts.txt  7_chatbot_persistance_final.py  7_prompts_chatbot_multimodal.txt  app.py  (+6 more)
(+45 files in other folders)
